--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,16 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^0.18.1
-  http: ^0.12.2
-  intl: ^0.16.1
-  meta: ^1.1.8
-  async: ^2.4.2
-  dio: ^3.0.10
-  get_it: ^4.0.4
-  equatable: ^1.2.4
+  flutter_svg: ^0.22.0
+  http: ^0.13.3
+  intl: ^0.17.0
+  meta: ">=1.1.6 <2.0.0"
+  async: ^2.6.1
+  dio: ^4.0.0
+  get_it: ^7.1.3
+  equatable: ^2.0.2
   tripledes: ^2.1.0
-  webview_flutter: ^0.3.22+1
+  webview_flutter: ^2.0.8
 
 
 dev_dependencies:
